# ocaml-sodium

./: dune-project  sodium.opam
lib/: dune  sodium.ml  sodium.mli
lib_gen/: dune  sodium_bindgen.ml
lib_gen/config/: discover.ml
lib_test/: dune
