(library
  (name sodium_generated)
  (public_name sodium.generated)
  (libraries ctypes.stubs sodium_bindings)
  (modules sodium_generated)
  (foreign_stubs
    (language c)
    (names sodium_stubs)
    (flags (:standard (:include c_flags.sexp))))
  (c_library_flags (:standard (:include c_flags_libs.sexp))))

(library
  (name sodium_bindings)
  (public_name sodium.bindings)
  (libraries ctypes sodium_storage sodium_types)
  (modules sodium_bindings sodium_types_detected))

(library
  (name sodium_types)
  (public_name sodium.types)
  (libraries ctypes)
  (modules sodium_types))

(executable
  (name sodium_bindgen)
  (libraries ctypes ctypes.stubs sodium_bindings sodium_storage)
  (modules sodium_bindgen)
  (flags :standard -w -33))

(executable
  (name sodium_typegen)
  (libraries ctypes ctypes.stubs sodium_types)
  (modules sodium_typegen)
  (flags :standard -w -33))

(rule
  (targets c_flags.lines c_flags_libs.lines c_flags.sexp c_flags_libs.sexp)
  (action
    (run ./config/discover.exe)))

(rule
  (targets sodium_types_detect.c)
  (action
    (run ./sodium_typegen.exe)))

(rule
  (deps (:c sodium_types_detect.c) c_flags.lines c_flags_libs.lines)
  (target sodium_types_detect)
  (action
    (run %{cc} -I %{lib:ctypes:} -I %{ocaml_where} %{read-lines:c_flags.lines} %{read-lines:c_flags_libs.lines} -o %{target} %{c})))

(rule
  (targets sodium_types_detected.ml)
  (action
    (with-stdout-to
      sodium_types_detected.ml
      (progn
        (echo "[@@@warning \"-9-27\"]")
        (run ./sodium_types_detect)))))

(rule
  (targets sodium_generated.ml sodium_stubs.c)
  (action
    (run ./sodium_bindgen.exe)))
